Cambio de prueba

--- a/mecanica.html
+++ b/mecanica.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AutoTech Taller - Sistema de Mecánica</title>
+  <title>Montana Taller - Sistema de Mecánica</title>
   <style>
     /* Estilos generales */
     * {
@@ -175,7 +175,7 @@
 <body>
 
   <header>
-    <h1>AutoTech Taller</h1>
+    <h1>Montana Taller</h1>
     <nav>
       <a href="#inicio">Inicio</a>
       <a href="#servicios">Servicios</a>
